<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="25dp"
    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/tvTitle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity = "center"
	        android:text="@string/title_screen_title_textbox"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <Button
	        android:id="@+id/bPlayGame"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/title_screen_play_button" />
	    
	    <Button
	        android:id="@+id/bCreateGame"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/title_screen_create_button" />
	
	    <Button
	        android:id="@+id/bSettings"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/title_screen_setttings_button" />
	     
	    <Button
	        android:id="@+id/bAbout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/title_screen_about_button"/>


</LinearLayout>